<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather App</string>
    <string name="hint_city_name">Enter city name</string>
    <string name="btn_search">Search</string>
    <string name="forecast_title">3-Day Forecast</string>
    <string name="hourly_forecast_title">Hourly Forecast</string>
    <string name="invalid_city_name">Invalid city name</string>
    <string name="enter_city_name">Please enter a city name</string>
    <string name="error_hourly_forecast">Failed to open hourly forecast</string>
    <string name="no_forecast_data">Forecast data not available. Please search again.</string>
    <string name="enter_city_name_first">Please enter a city name first</string>
    <string name="json_parsing_error">JSON parsing error</string>
    <string name="error_fetching_weather">Error fetching weather data</string>
    <string name="error_parsing_alerts">Error parsing severe weather alerts</string>
    <string name="error_fetching_alerts">Error fetching severe weather alerts</string>
    <string name="forecast_parsing_error">Forecast parsing error</string>
    <string name="error_fetching_forecast">Error fetching forecast data</string>
    <string name="error_fetching_map">Error fetching weather map</string>
    <string name="humidity_template">Humidity: %d%%</string>
    <string name="wind_template">Wind: %.1f m/s</string>
    <string name="weather_icon_description">Current weather icon</string>
    <string name="forecast_icon_description">Forecast weather icon</string>
    <string name="weather_map_description">Precipitation map</string>
    <string name="day_prefix">Day</string>
    <string name="current_date_time">Current Date and Time</string>
    <string name="no_severe_weather_alerts">No severe weather alerts</string> >
</resources>